# Umbra-Protocol

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package.json
clients/__tests__/: cross_module_smoke.test.ts
clients/audit-sdk/: package.json
clients/audit-sdk/src/: AuditClient.ts  index.ts
clients/audit-sdk/src/__tests__/: AuditClient.test.ts
clients/escrow-sdk/: jest.e2e.config.js  package.json
clients/escrow-sdk/src/: EscrowClient.ts  index.ts
clients/escrow-sdk/src/__tests__/: EscrowClient.test.ts
contracts/umbra-audit/: Cargo.toml
contracts/umbra-audit/src/: lib.rs  proof_verifier.rs
contracts/umbra-audit/test_snapshots/: test_double_init_panics.1.json  test_event_contains_no_private_balance.1.json  test_fail_attested_proof_returns_false.1.json  test_init_sets_regulator_and_verifier_key.1.json  test_invalid_signature_panics.1.json  test_multi_asset_all_pass.1.json  test_multi_asset_one_fail_returns_false.1.json  test_non_regulator_cannot_set_threshold.1.json  test_regulator_can_set_threshold.1.json  test_submit_proof_without_threshold_panics.1.json  test_valid_proof_submission_returns_true.1.json
contracts/umbra-audit/tests/: audit_integration.rs
contracts/umbra-crypto/: Cargo.toml
contracts/umbra-crypto/src/: commitment.rs  lib.rs  range_proof.rs  range_proof_verify.rs
contracts/umbra-escrow/: Cargo.toml
contracts/umbra-escrow/src/: commitments.rs  dispute.rs  lib.rs
contracts/umbra-escrow/tests/: escrow_integration.rs
dashboard/: index.html  package.json  tsconfig.json
dashboard/src/: App.css  App.tsx  ComplianceDashboard.tsx
docs/: CHANGELOG.md  api-reference.md  proof-system.md  threat-model.md
scripts/: deploy.sh  setup-local-network.sh
tests/: audit_integration.rs  escrow_integration.rs
