[package]
name = "umbra-escrow"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
soroban-sdk.workspace = true
umbra-crypto = { workspace = true, default-features = false }
curve25519-dalek-ng = { version = "4", default-features = false, features = ["u64_backend"] }
# Force getrandom `custom` for wasm32 transitive dep compatibility (same as umbra-audit).
getrandom = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "21", features = ["testutils"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = []
